--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
 	text-align:center;
 	font-family:Helvetica;
 	font-size:24px;
+	height:100%;
+	width: 100%;
+	padding-top: 20%;
+
 }
 
 h1 {
@@ -13,7 +17,7 @@ h1 {
 	padding: 1%;
 	width:46%;
 	height: 18%;
-	margin:300px 350px;	
+	margin:auto;	
 }
 
 p{
